--- a/projectgeneral/templates/attorneys.html
+++ b/projectgeneral/templates/attorneys.html
@@ -274,7 +274,7 @@
 
                                 <div class="col-lg-4 col-sm-6 col-12 mb-30">
                                     <div class="team text-center">
-                                        <a href="http://localhost:8000/singleattorney" class="team-image"><img src="{% static 'assets/images/team/team-1.jpg' %}" alt=""></a>
+                                        <a href="http://localhost:8000/singleattorney" class="team-image"><img src="/media/DERS.png" alt=""></a>
                                         <div class="team-content">
                                             <h3 class="name">{{attorney.name}} {{attorney.surname}}</h3>
                                             <span class="title">{{attorney.absolutejob}}</span>
