--- a/projectgeneral/templates/single-attorney.html
+++ b/projectgeneral/templates/single-attorney.html
@@ -272,7 +272,7 @@
 
                 <!--Team Image Start-->
                 <div class="single-team-image col-lg-6 col-12">
-                    <img src="assets/images/team/single-team-1.jpg" alt="">
+                    <img src="/media/DERS.png" alt="">
                 </div>
                 <!--Team Image End-->
 
