--- a/projectgeneral/templates/shop.html
+++ b/projectgeneral/templates/shop.html
@@ -16,7 +16,7 @@
                         <div class="col-lg-6">
                             <div class="header-top-left">
                                 <div class="header-top-left-info">
-                                    <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
+                                    <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
                                     <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
                                 </div>
                             </div>
@@ -211,7 +211,7 @@
                     </div>
 
                     <div class="offcanvas-info mt-auto">
-                        <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
+                        <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
                         <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
                     </div>
                     <div class="offcanvas-social">
