--- a/projectgeneral/templates/single-attorney.html
+++ b/projectgeneral/templates/single-attorney.html
@@ -17,7 +17,7 @@
                     <div class="col-lg-6">
                         <div class="header-top-left">
                             <div class="header-top-left-info">
-                                <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
+                                <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
                                 <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
                             </div>
                         </div>
@@ -272,7 +272,7 @@
 
                 <!--Team Image Start-->
                 <div class="single-team-image col-lg-6 col-12">
-                    <img src="/media/DERS.png" alt="">
+                    <img src="{{ attorney.image.url }}" alt="">
                 </div>
                 <!--Team Image End-->
 
