--- a/projectgeneral/templates/attorneys.html
+++ b/projectgeneral/templates/attorneys.html
@@ -16,8 +16,8 @@
                     <div class="col-lg-6">
                         <div class="header-top-left">
                             <div class="header-top-left-info">
-                                <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
-                                <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
+                                <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
+                                <p><i class="fa fa-phone"></i><a href="#">070-852-74-90</a></p>
                             </div>
                         </div>
                     </div>
@@ -274,7 +274,7 @@
 
                                 <div class="col-lg-4 col-sm-6 col-12 mb-30">
                                     <div class="team text-center">
-                                        <a href="http://localhost:8000/singleattorney" class="team-image"><img src="/media/DERS.png" alt=""></a>
+                                        <a href="http://localhost:8000/singleattorney" class="team-image"><img src="{{ attorney.image.url }}" alt=""></a>
                                         <div class="team-content">
                                             <h3 class="name">{{attorney.name}} {{attorney.surname}}</h3>
                                             <span class="title">{{attorney.absolutejob}}</span>
