--- a/projectgeneral/templates/contact.html
+++ b/projectgeneral/templates/contact.html
@@ -215,7 +215,7 @@
                     </div>
 
                     <div class="offcanvas-info mt-auto">
-                        <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
+                        <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
                         <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
                     </div>
                     <div class="offcanvas-social">
