--- a/projectgeneral/templates/about-us.html
+++ b/projectgeneral/templates/about-us.html
@@ -90,7 +90,7 @@
                             <div class="primary-menu">
                                 <nav>
                                     <ul>
-                                        <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
+                                        <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
                                             
                                         </li>
                                         
