--- a/projectgeneral/templates/attorneys.html
+++ b/projectgeneral/templates/attorneys.html
@@ -85,7 +85,7 @@
                         <div class="primary-menu">
                             <nav>
                                 <ul>
-                                    <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
+                                    <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
                                         <ul class="sub-menu">
                                             <li><a href="http://localhost:8000">Homepage 01</a></li>
                                             
@@ -173,7 +173,7 @@
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
                                         <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
-                                        <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
+                                        <li><a href="{% url 'singleattorney' singleattorney.id %}">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                         <li><a href="careers.html">Careers</a></li>
                                     </ul>
