--- a/projectgeneral/templates/about-us.html
+++ b/projectgeneral/templates/about-us.html
@@ -32,7 +32,7 @@
                         <div class="col-lg-6">
                             <div class="header-top-right">
                                 <p class="header-top-right-text">Add an interesting message for your visitors</p>
-                                <a href="http://localhost:8000/cart" class="header-top-right-cart">
+                                <a href="{% url ' home:cart' %}" class="header-top-right-cart">
                                     <i class="ion-bag" data-count="2"></i> $43.00
                                 </a>
                             </div>
@@ -63,7 +63,7 @@
                     <!--Center Start-->
                     <div class="header-middle-center col">
                         <div class="header-logo">
-                            <a href="http://localhost:8000"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                            <a href="{% url 'home' %}"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
                         </div>
                     </div>
                     <!--Center End-->
@@ -71,7 +71,7 @@
                     <!--Right Start-->
                     <div class="header-middle-right col-auto">
                         <div class="header-middle-free-case">
-                            <a href="http://localhost:8000/contact"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
+                            <a href="{% url 'contact' %}"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
                         </div>
                     </div>
                     <!--Right End-->
@@ -97,24 +97,24 @@
                                        
                                         <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                             <ul class="sub-menu">
-                                                <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                                <li><a href="{% url 'attorneys' %}">Attorneys</a></li>
                                                 
                                             </ul>
                                         </li>
                                         
-                                        <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
+                                        <li class="menu-item-has-children"><a href="{% url 'shop' %}">Shop</a>
                                             <ul class="sub-menu">
-                                                <li><a href="http://localhost:8000/shop">Shop</a></li>
-                                                <li><a href="http://localhost:8000/productdetail">Product Details</a></li>
-                                                <li><a href="http://localhost:8000/cart">Shopping Cart</a></li>
+                                                <li><a href="{% url 'shop' %}">Shop</a></li>
+                                                <li><a href="{% url 'productdetail' %}">Product Details</a></li>
+                                                <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
                                                 
                                             </ul>
                                         </li>
                                         <li class="menu-item-has-children"><a href="#">Pages</a>
                                             <ul class="sub-menu">
-                                                <li><a href="http://localhost:8000/about">About us</a></li>
-                                                <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
-                                                <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                                                <li><a href="{% url 'about' %}">About us</a></li>
+                                                <li><a href="{% url 'contact' %}">Contact us 1</a></li>
+                                                <li><a href="{% url 'faq' %}">F.A.Q</a></li>
                                                 
                                             </ul>
                                         </li>
@@ -147,14 +147,14 @@
                     <!--Left Start-->
                     <div class="col d-flex align-items-center">
                         <div class="header-logo mobile-header-logo">
-                            <a href="http://localhost:8000/"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                            <a href="{% url 'home' %}"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
                         </div>
                     </div>
                     <!--Left End-->
 
                     <!--Right Start-->
                     <div class="col-auto d-flex align-items-center">
-                        <a href="http://localhost:8000/cart" class="mobile-header-cart">
+                        <a href="{% url 'cart' %}" class="mobile-header-cart">
                             <i class="ion-bag" data-count="2"></i>
                         </a>
                         <div class="mobile-header-right-toggles">
@@ -179,9 +179,9 @@
                     <div class="offcanvas-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
+                                <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://localhost:8000">Homepage 01</a></li>
+                                        <li><a href="{% url 'home' %}">Homepage 01</a></li>
                                         <li><a href="index-2.html">Homepage 02</a></li>
                                         <li><a href="index-3.html">Homepage 03</a></li>
                                         <li><a href="index-4.html">Homepage 04</a></li>
@@ -206,8 +206,8 @@
                                 <li><a href="case-results.html">Case Results</a></li>
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://127.0.0.1:8000/attorneys">Attorneys</a></li>
-                                        <li><a href="single-attorney.html">Single Attorney</a></li>
+                                        <li><a href="{% url 'attorneys' %}">Attorneys</a></li>
+                                        <li><a href="{% url 'singleattorney' %}">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                         <li><a href="careers.html">Careers</a></li>
                                     </ul>
@@ -219,9 +219,9 @@
                                         <li><a href="news-details.html">News Details</a></li>
                                     </ul>
                                 </li>
-                                <li class="menu-item-has-children"><a href="shop.html">Shop</a>
+                                <li class="menu-item-has-children"><a href="{% url 'shop' %}">Shop</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://127.0.0.1:8000/shop">Shop</a></li>
+                                        <li><a href={% url 'shop' %}">Shop</a></li>
                                         <li><a href="shop-2-column.html">Shop 2 Column</a></li>
                                         <li><a href="http://127.0.0.1:8000/productdetail">Product Details</a></li>
                                         <li><a href="http://127.0.0.1:8000/cart">Shopping Cart</a></li>
@@ -233,10 +233,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://localhost:8000/about">About us</a></li>
-                                        <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
+                                        <li><a href="{% url 'about' %}">About us</a></li>
+                                        <li><a href="{% url 'contact' %}">Contact us 1</a></li>
                                         
-                                        <li><a href="http://localhost:8000">F.A.Q</a></li>
+                                        <li><a href="{% url 'faq' %}">F.A.Q</a></li>
                                         
                                     </ul>
                                 </li>
@@ -285,7 +285,7 @@
 
                         <h1 class="page-title">About us</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="http://localhost:8000">Home</a></li>
+                            <li><a href="{% url 'home' %}>Home</a></li>
                             <li>About us</li>
                         </ul>
 
@@ -554,11 +554,11 @@
                     <!--Attorney Start-->
                     <div class="col-lg-4 col-sm-6 col-12 mb-30">
                         <div class="team text-center">
-                            <a href="single-attorney.html" class="team-image"><img src="{% static 'assets/images/team/team-1.jpg' %}" alt=""></a>
+                            <a href="{% url 'singleattorney' %}" class="team-image"><img src="{% static 'assets/images/team/team-1.jpg' %}" alt=""></a>
                             <div class="team-content">
                                 <h3 class="name">Kellan Dust</h3>
                                 <span class="title">BANK & FINANCIAL LAWYER</span>
-                                <a href="single-attorney.html" class="read-more">Read Profile</a>
+                                <a href="{% url 'singleattorney' %}" class="read-more">Read Profile</a>
                             </div>
                         </div>
                     </div>
@@ -567,11 +567,11 @@
                     <!--Attorney Start-->
                     <div class="col-lg-4 col-sm-6 col-12 mb-30">
                         <div class="team text-center">
-                            <a href="single-attorney.html" class="team-image"><img src="{% static 'assets/images/team/team-2.jpg' %}" alt=""></a>
+                            <a href="{% url 'singleattorney' %}" class="team-image"><img src="{% static 'assets/images/team/team-2.jpg' %}" alt=""></a>
                             <div class="team-content">
                                 <h3 class="name">Laura Griffin</h3>
                                 <span class="title">BANK & FINANCIAL LAWYER</span>
-                                <a href="single-attorney.html" class="read-more">Read Profile</a>
+                                <a href="{% url 'singleattorney' %}" class="read-more">Read Profile</a>
                             </div>
                         </div>
                     </div>
@@ -580,11 +580,11 @@
                     <!--Attorney Start-->
                     <div class="col-lg-4 col-sm-6 col-12 mb-30">
                         <div class="team text-center">
-                            <a href="single-attorney.html" class="team-image"><img src="{% static 'assets/images/team/team-3.jpg' %}" alt=""></a>
+                            <a href="{% url 'singleattorney' %}" class="team-image"><img src="{% static 'assets/images/team/team-3.jpg' %}" alt=""></a>
                             <div class="team-content">
                                 <h3 class="name">Joseph Steward</h3>
                                 <span class="title">BANK & FINANCIAL LAWYER</span>
-                                <a href="single-attorney.html" class="read-more">Read Profile</a>
+                                <a href="{% url 'singleattorney' %}" class="read-more">Read Profile</a>
                             </div>
                         </div>
                     </div>
