--- a/projectgeneral/templates/cart.html
+++ b/projectgeneral/templates/cart.html
@@ -2,10 +2,10 @@
 {% block body %} 
 {% load static %}
 
-    <div class="main-wrapper">
+<div class="main-wrapper">
 
-       <!--Header Section Start-->
-       <div class="header-section d-none d-lg-block">
+    <!--Header Section Start-->
+    <div class="header-section d-none d-lg-block">
 
         <!--Header Top Start-->
         <div class="header-top">
@@ -16,7 +16,7 @@
                     <div class="col-lg-6">
                         <div class="header-top-left">
                             <div class="header-top-left-info">
-                                <p><i class="fa fa-envelope-o"></i><a href="mailto:ebulzade@inbox.ru">Send mail to me</a></p>
+                                <p><i class="fa fa-envelope-o"></i><a href="mailto:contact@yoursite.com">contact@yoursite.com</a></p>
                                 <p><i class="fa fa-phone"></i><a href="#">1.800.123.4569</a></p>
                             </div>
                         </div>
@@ -27,7 +27,7 @@
                     <div class="col-lg-6">
                         <div class="header-top-right">
                             <p class="header-top-right-text">Add an interesting message for your visitors</p>
-                            <a href="http://localhost:8000/cart" class="header-top-right-cart">
+                            <a href="{% url 'cart' %}" class="header-top-right-cart">
                                 <i class="ion-bag" data-count="2"></i> $43.00
                             </a>
                         </div>
@@ -58,7 +58,7 @@
                 <!--Center Start-->
                 <div class="header-middle-center col">
                     <div class="header-logo">
-                        <a href="http://localhost:8000"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
+                        <a href="{% url 'home' %}"><img src="{% static 'assets/images/logo/logo_1.png' %}" alt="Lawyer Attorneys"></a>
                     </div>
                 </div>
                 <!--Center End-->
@@ -66,7 +66,7 @@
                 <!--Right Start-->
                 <div class="header-middle-right col-auto">
                     <div class="header-middle-free-case">
-                        <a href="http://localhost:8000/contact"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
+                        <a href="{% url 'contact' %}"><i class="pe-7s-culture"></i>FREE CASE EVALUATION</a>
                     </div>
                 </div>
                 <!--Right End-->
@@ -85,31 +85,31 @@
                         <div class="primary-menu">
                             <nav>
                                 <ul>
-                                    <li class="menu-item-has-children"><a href="http://localhost:8000">Home</a>
+                                    <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
                                         
                                     </li>
                                     
                                    
                                     <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                         <ul class="sub-menu">
-                                            <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
+                                            <li><a href="{% url 'attorneys' %}">Attorneys</a></li>
                                             
                                         </ul>
                                     </li>
                                     
-                                    <li class="menu-item-has-children"><a href="http://localhost:8000/shop">Shop</a>
+                                    <li class="menu-item-has-children"><a href="{% url 'shop' %}">Shop</a>
                                         <ul class="sub-menu">
-                                            <li><a href="http://localhost:8000/shop">Shop</a></li>
-                                            <li><a href="http://localhost:8000/productdetail">Product Details</a></li>
-                                            <li><a href="http://localhost:8000/cart">Shopping Cart</a></li>
+                                            <li><a href="{% url 'shop' %}">Shop</a></li>
+                                            <li><a href="{% url 'productdetail' %}">Product Details</a></li>
+                                            <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
                                             
                                         </ul>
                                     </li>
                                     <li class="menu-item-has-children"><a href="#">Pages</a>
                                         <ul class="sub-menu">
-                                            <li><a href="http://localhost:8000/about">About us</a></li>
-                                            <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
-                                            <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
+                                            <li><a href="{% url 'about' %}">About us</a></li>
+                                            <li><a href="{% url 'contact' %}">Contact us 1</a></li>
+                                            <li><a href="{% url 'faq' %}">F.A.Q</a></li>
                                             
                                         </ul>
                                     </li>
@@ -146,9 +146,9 @@
                     <div class="offcanvas-menu">
                         <nav>
                             <ul>
-                                <li class="menu-item-has-children"><a href="ihttp://localhost:8000/">Home</a>
+                                <li class="menu-item-has-children"><a href="{% url 'home' %}">Home</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://localhost:8000/">Homepage 01</a></li>
+                                        <li><a href="{% url 'home' %}">Homepage 01</a></li>
                                         <li><a href="index-2.html">Homepage 02</a></li>
                                         <li><a href="index-3.html">Homepage 03</a></li>
                                         <li><a href="index-4.html">Homepage 04</a></li>
@@ -173,8 +173,8 @@
                                 <li><a href="case-results.html">Case Results</a></li>
                                 <li class="menu-item-has-children"><a href="#">Our Firm</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://localhost:8000/attorneys">Attorneys</a></li>
-                                        <li><a href="http://localhost:8000/singleattorney">Single Attorney</a></li>
+                                        <li><a href="{% url 'attorneys' %}">Attorneys</a></li>
+                                        <li><a href="single-attorney.html">Single Attorney</a></li>
                                         <li><a href="honnors-and-awards.html">Honnors And Awards</a></li>
                                         <li><a href="careers.html">Careers</a></li>
                                     </ul>
@@ -188,10 +188,10 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="shop.html">Shop</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://localhost:8000/shop">Shop</a></li>
+                                        <li><a href="{% url 'shop' %}">Shop</a></li>
                                         <li><a href="shop-2-column.html">Shop 2 Column</a></li>
-                                        <li><a href="http://localhost:8000/productdetail">Product Details</a></li>
-                                        <li><a href="http://localhost:8000/cart">Shopping Cart</a></li>
+                                        <li><a href="{% url 'productdetail' %}">Product Details</a></li>
+                                        <li><a href="{% url 'cart' %}">Shopping Cart</a></li>
                                         <li><a href="checkout.html">Checkout</a></li>
                                         <li><a href="login-register.html">Login & Register</a></li>
                                         <li><a href="my-account.html">My Account</a></li>
@@ -200,11 +200,11 @@
                                 </li>
                                 <li class="menu-item-has-children"><a href="#">Pages</a>
                                     <ul class="sub-menu">
-                                        <li><a href="http://localhost:8000/about">About us</a></li>
-                                        <li><a href="http://localhost:8000/contact">Contact us 1</a></li>
-                                        <li><a href="contact-us-2.html">Contact us 2</a></li>
-                                        <li><a href="http://localhost:8000/faq">F.A.Q</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="{% url 'about' %}">About us</a></li>
+                                        <li><a href="{% url 'contact' %}">Contact us 1</a></li>
+                                        
+                                        <li><a href="{% url 'faq' %}">F.A.Q</a></li>
+                                        
                                     </ul>
                                 </li>
                             </ul>
@@ -252,7 +252,7 @@
 
                         <h1 class="page-title">Shopping Cart</h1>
                         <ul class="page-breadcrumb">
-                            <li><a href="http://localhost:8000/">Home</a></li>
+                            <li><a href="{% url 'home' %}">Home</a></li>
                             <li>Shopping Cart</li>
                         </ul>
 
@@ -285,32 +285,32 @@
                                 <tbody>
                                     <tr>
                                         <td class="product-remove"><button class="remove"><i class="ion-android-close"></i></button></td>
-                                        <td class="product-thumbnail"><a href="product-details.html"><img src="{% static 'assets/images/products/product-cart-1.png' %}" alt=""></a></td>
-                                        <td class="product-name"><a href="product-details.html">Album</a></td>
+                                        <td class="product-thumbnail"><a href="{% url 'productdetail' %}"><img src="{% static 'assets/images/products/product-cart-1.png' %}" alt=""></a></td>
+                                        <td class="product-name"><a href="{% url 'productdetail' %}">Album</a></td>
                                         <td class="product-price"><span>$15.00</span></td>
                                         <td class="product-quantity"><span class="quantity"><input type="number" min="1" value="1"></span></td>
                                         <td class="product-subtotal"><span>$15.00</span></td>
                                     </tr>
                                     <tr>
                                         <td class="product-remove"><button class="remove"><i class="ion-android-close"></i></button></td>
-                                        <td class="product-thumbnail"><a href="product-details.html"><img src="{% static 'assets/images/products/product-cart-2.png' %}" alt=""></a></td>
-                                        <td class="product-name"><a href="product-details.html">Beanie</a></td>
+                                        <td class="product-thumbnail"><a href="{% url 'productdetail' %}"><img src="{% static 'assets/images/products/product-cart-2.png' %}" alt=""></a></td>
+                                        <td class="product-name"><a href="{% url 'productdetail' %}">Beanie</a></td>
                                         <td class="product-price"><span>$18.00</span></td>
                                         <td class="product-quantity"><span class="quantity"><input type="number" min="1" value="1"></span></td>
                                         <td class="product-subtotal"><span>$18.00</span></td>
                                     </tr>
                                     <tr>
                                         <td class="product-remove"><button class="remove"><i class="ion-android-close"></i></button></td>
-                                        <td class="product-thumbnail"><a href="product-details.html"><img src="{% static 'assets/images/products/product-cart-3.png' %}" alt=""></a></td>
-                                        <td class="product-name"><a href="product-details.html">Beanie with Logo</a></td>
+                                        <td class="product-thumbnail"><a href="{% url 'productdetail' %}"><img src="{% static 'assets/images/products/product-cart-3.png' %}" alt=""></a></td>
+                                        <td class="product-name"><a href="{% url 'productdetail' %}">Beanie with Logo</a></td>
                                         <td class="product-price"><span>$18.00</span></td>
                                         <td class="product-quantity"><span class="quantity"><input type="number" min="1" value="1"></span></td>
                                         <td class="product-subtotal"><span>$18.00</span></td>
                                     </tr>
                                     <tr>
                                         <td class="product-remove"><button class="remove"><i class="ion-android-close"></i></button></td>
-                                        <td class="product-thumbnail"><a href="product-details.html"><img src="{% static 'assets/images/products/product-cart-4.png' %}" alt=""></a></td>
-                                        <td class="product-name"><a href="product-details.html">Belt</a></td>
+                                        <td class="product-thumbnail"><a href="{% url 'productdetail' %}"><img src="{% static 'assets/images/products/product-cart-4.png' %}" alt=""></a></td>
+                                        <td class="product-name"><a href="{% url 'productdetail' %}">Belt</a></td>
                                         <td class="product-price"><span>$55.00</span></td>
                                         <td class="product-quantity"><span class="quantity"><input type="number" min="1" value="1"></span></td>
                                         <td class="product-subtotal"><span>$55.00</span></td>
